// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`routes > review > getReviews > audit > expected call 1`] = `
[
  {
    "createdAt": 2023-08-13T00:00:00.000Z,
    "kind": "release",
    "modelId": "abc",
    "responses": [],
    "role": "msro",
    "semver": "3.0.3",
    "updatedAt": 2023-08-14T00:00:00.000Z,
  },
]
`;

exports[`routes > review > getReviews > returns only reviews for the specified model 1`] = `
{
  "reviews": [
    {
      "createdAt": "2023-08-13T00:00:00.000Z",
      "kind": "release",
      "modelId": "abc",
      "responses": [],
      "role": "msro",
      "semver": "3.0.3",
      "updatedAt": "2023-08-14T00:00:00.000Z",
    },
  ],
}
`;

exports[`routes > review > getReviews > returns only reviews for the specified model 2`] = `
[
  [
    {
      "dn": "user",
    },
    true,
    "abc",
    undefined,
    undefined,
    undefined,
  ],
]
`;

exports[`routes > review > getReviews > returns reviews 1`] = `
{
  "reviews": [
    {
      "createdAt": "2023-08-13T00:00:00.000Z",
      "kind": "release",
      "modelId": "abc",
      "responses": [],
      "role": "msro",
      "semver": "3.0.3",
      "updatedAt": "2023-08-14T00:00:00.000Z",
    },
  ],
}
`;
